--- a/ADM/HW-1/HW1.ipynb
+++ b/ADM/HW-1/HW1.ipynb
@@ -1538,6 +1538,423 @@
   },
   {
    "cell_type": "markdown",
+   "id": "584da534",
+   "metadata": {},
+   "source": [
+    "## Problem Solving - using Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6627dafe",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b0c263",
+   "metadata": {},
+   "source": [
+    "### Solve Me First"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c55a972",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solveMeFirst(a,b):\n",
+    "\n",
+    "num1 = int(input())\n",
+    "num2 = int(input())\n",
+    "res = solveMeFirst(num1,num2)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555c2d5d",
+   "metadata": {},
+   "source": [
+    "### Simple Array Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a320c975",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'simpleArraySum' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER.\n",
+    "# The function accepts INTEGER_ARRAY ar as parameter.\n",
+    "#\n",
+    "\n",
+    "def simpleArraySum(ar):\n",
+    "    sum = 0\n",
+    "    for i in ar:\n",
+    "        if 0 < i or i <= 1000:\n",
+    "            sum += i\n",
+    "    return sum\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    ar_count = int(input().strip())\n",
+    "\n",
+    "    ar = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    result = simpleArraySum(ar)\n",
+    "\n",
+    "    fptr.write(str(result) + '\\n')\n",
+    "\n",
+    "    fptr.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d609a71",
+   "metadata": {},
+   "source": [
+    "### Compare the Triplets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0531e1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'compareTriplets' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER_ARRAY.\n",
+    "# The function accepts following parameters:\n",
+    "#  1. INTEGER_ARRAY a\n",
+    "#  2. INTEGER_ARRAY b\n",
+    "#\n",
+    "\n",
+    "def compareTriplets(a, b):\n",
+    "    score_a = 0\n",
+    "    score_b = 0\n",
+    "    i = 0\n",
+    "    \n",
+    "    while i < len(a):\n",
+    "        if a[i] > b[i] : score_a += 1\n",
+    "        elif a[i] < b[i] : score_b += 1\n",
+    "        i += 1\n",
+    "\n",
+    "    return [score_a, score_b]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    a = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    b = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    result = compareTriplets(a, b)\n",
+    "\n",
+    "    fptr.write(' '.join(map(str, result)))\n",
+    "    fptr.write('\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49401907",
+   "metadata": {},
+   "source": [
+    "### A Very Big Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40c74c27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'aVeryBigSum' function below.\n",
+    "#\n",
+    "# The function is expected to return a LONG_INTEGER.\n",
+    "# The function accepts LONG_INTEGER_ARRAY ar as parameter.\n",
+    "#\n",
+    "\n",
+    "def aVeryBigSum(ar):\n",
+    "    # Write your code here\n",
+    "    sum = 0\n",
+    "    for i in ar:\n",
+    "        sum += i\n",
+    "    return sum    \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    ar_count = int(input().strip())\n",
+    "\n",
+    "    ar = list(map(int, input().rstrip().split()))\n",
+    "\n",
+    "    result = aVeryBigSum(ar)\n",
+    "\n",
+    "    fptr.write(str(result) + '\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "092c0f78",
+   "metadata": {},
+   "source": [
+    "### Diagonal Difference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "813fb226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'diagonalDifference' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER.\n",
+    "# The function accepts 2D_INTEGER_ARRAY arr as parameter.\n",
+    "#\n",
+    "\n",
+    "def diagonalDifference(arr):\n",
+    "    # Write your code here\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    n = int(input().strip())\n",
+    "\n",
+    "    arr = []\n",
+    "\n",
+    "    for _ in range(n):\n",
+    "        arr.append(list(map(int, input().rstrip().split())))\n",
+    "\n",
+    "    result = diagonalDifference(arr)\n",
+    "\n",
+    "    fptr.write(str(result) + '\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2917c744",
+   "metadata": {},
+   "source": [
+    "### Viral Advertising"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc71bcba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/python3\n",
+    "\n",
+    "import math\n",
+    "import os\n",
+    "import random\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "#\n",
+    "# Complete the 'viralAdvertising' function below.\n",
+    "#\n",
+    "# The function is expected to return an INTEGER.\n",
+    "# The function accepts INTEGER n as parameter.\n",
+    "#\n",
+    "\n",
+    "def viralAdvertising(n):\n",
+    "    i = 1\n",
+    "    shares = n\n",
+    "    likes = math.floor(shares / 2)\n",
+    "    \n",
+    "    while i <= n:\n",
+    "        i = i + 1\n",
+    "        shares = likes * 3\n",
+    "        likes = likes + math.floor(shares / 2)\n",
+    "    \n",
+    "    return likes\n",
+    "        \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    fptr = open(os.environ['OUTPUT_PATH'], 'w')\n",
+    "\n",
+    "    n = int(input().strip())\n",
+    "\n",
+    "    result = viralAdvertising(n)\n",
+    "\n",
+    "    fptr.write(str(result) + '\\n')\n",
+    "\n",
+    "    fptr.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "932da64d",
+   "metadata": {},
+   "source": [
+    "### Re.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ecb30ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regex_pattern = r\"[.,]+\"\t# Do not delete 'r'.\n",
+    "\n",
+    "import re\n",
+    "print(\"\\n\".join(re.split(regex_pattern, input())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f44d801",
+   "metadata": {},
+   "source": [
+    "### XML 1 - Find the Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70c29d10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import xml.etree.ElementTree as etree\n",
+    "\n",
+    "def get_attr_number(node):\n",
+    "    number = 0\n",
+    "    # map through html to find tags\n",
+    "    for html in node:\n",
+    "        # print(get_attr_number(html))\n",
+    "        number = number + get_attr_number(html)\n",
+    "    \n",
+    "    return number + len(node.attrib)\n",
+    "\n",
+    "# 0\n",
+    "# 1\n",
+    "# 3\n",
+    "# 0\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    sys.stdin.readline()\n",
+    "    xml = sys.stdin.read()\n",
+    "    tree = etree.ElementTree(etree.fromstring(xml))\n",
+    "    root = tree.getroot()\n",
+    "    print(get_attr_number(root))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de05785",
+   "metadata": {},
+   "source": [
+    "### Numpy Arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcbac15f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "def arrays(arr):\n",
+    "    # In [1]: 'abc'[::-1]\n",
+    "    # Out[1]: 'cba'\n",
+    "    # In [2]: 'abc'[slice(None,None,-1)]\n",
+    "    # Out[2]: 'cba'\n",
+    "    return (numpy.array(arr[::-1], float))\n",
+    " \n",
+    "arr = input().strip().split(' ')\n",
+    "result = arrays(arr)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f7ebbde",
+   "metadata": {},
+   "source": [
+    "### Numpy Shape and Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb97e964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "arr = input().split(' ')\n",
+    "numpy_arr = numpy.array(arr, int)\n",
+    "print(numpy_arr.reshape(3, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab453c33",
    "metadata": {},
    "source": [
