--- a/Smart-Environment-Project-TIGER-3D-Point-Cloud-Generation-with-Diffusion-Process/Tiger_Diffusion.ipynb
+++ b/Smart-Environment-Project-TIGER-3D-Point-Cloud-Generation-with-Diffusion-Process/Tiger_Diffusion.ipynb
@@ -27,8 +27,8 @@
         "Code to our project on Github:\n",
         "- https://github.com/armanfeili/Sapienza-DS-projects/tree/main/Smart-Environment-Project-TIGER-3D-Point-Cloud-Generation-with-Diffusion-Process\n",
         "\n",
-        "Link to Drive:\n",
-        "https://colab.research.google.com/drive/1h3IXN14ofCPI0jWxp-vPF8unDqENv_hf?usp=sharing\n",
+        "Link to Drive (to see 3D visualization):\n",
+        "- https://colab.research.google.com/drive/1h3IXN14ofCPI0jWxp-vPF8unDqENv_hf?usp=sharing\n",
         "\n",
         "Professors:\n",
         "- Prof. Francesca Cuomo\n",
