--- a/Smart-Environment-IOT/Tiger_Diffusion.ipynb
+++ b/Smart-Environment-IOT/Tiger_Diffusion.ipynb
@@ -34,23 +34,12 @@
         "- Prof. Francesca Cuomo\n",
         "- Prof. Stefania Colonnese\n",
         "\n",
-        "1.\n",
-        "- Name: Syed Habibul\n",
-        "- Surname: Bashar\n",
-        "- Matricola: 2102742\n",
-        "- Email: bashar.2102742@studenti.uniroma1.it\n",
+        "Student:\n",
         "\n",
-        "2.\n",
         "- Name: Arman\n",
         "- Surname: Feili\n",
         "- Matricola: 2101835\n",
         "- Email: feili.2101835@studenti.uniroma1.it\n",
-        "\n",
-        "3.\n",
-        "- Name: Aysegul Sine\n",
-        "- Surname: Ozgenkan\n",
-        "- Matricola: 2108754\n",
-        "- Email: ozgenkan.2108754@studenti.uniroma1.it\n",
         "\n",
         "Paper:\n",
         "- https://openaccess.thecvf.com/content/CVPR2024/papers/Ren_TIGER_Time-Varying_Denoising_Model_for_3D_Point_Cloud_Generation_with_CVPR_2024_paper.pdf\n",
